--- a/package.json
+++ b/package.json
@@ -5,13 +5,33 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "android-release": "NODE_ENV=production node ./scripts/sign_play_store.js && npx react-native build-android --mode=release",
     "lint": "eslint .",
     "start": "react-native start",
+    "clean": "react-native-clean-project",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "deepmerge": "^4.3.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,5 +53,6 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "postinstall": "npx typesync"
 }
