--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.5",
