--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-mmkv": "^2.12.2",
@@ -26,7 +27,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
