--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
